# heos-controller

./: .bowerrc  .env.example  .gitattributes  .gitignore  .npmrc  .tool-versions  README.md  agents.md  bower.json  gulpfile.coffee  icon.icns  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish-linux.sh  publish-macos.sh  publish.sh  release.js  sync-version.js  vite.config.js
.agents/skills/jujutsu-lfs/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  compile-linux.yml  compile-macos.yml  compile-windows.yml  release.yml
app/: app-path.js  dev-app-update.yml  electron.js  heos-service.js  index.js  menu.js  package.json  pnpm-lock.yaml  preload.cjs  preload.js  preload.mjs
app/browser/: index.css  index.html  index.js
app/browser/css/: index.css
app/browser/js/: index.js
docs/superpowers/plans/: 2026-05-07-preferences-network-interface.md
docs/superpowers/specs/: 2026-05-07-preferences-network-interface-design.md
scripts/: build.js  open.js  sign.js  tauri-build.sh
src/: index.css  main.js
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
