[package]
name = "heos-controller"
version = "1.0.12"
description = "A Tauri app for controlling HEOS speakers"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-opener = "2.0.0"
anyhow = "1.0"
log = "0.4"
