[package]
name = "heos-controller"
version = "2.0.0"
description = "A Tauri app for controlling HEOS speakers"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-opener = "2.5.3"
anyhow = "1.0"
log = "0.4"
